HomeInside: fix z-index

--- a/frontend/src/templates/Home/components/Inside/Button/styles.module.scss
+++ b/frontend/src/templates/Home/components/Inside/Button/styles.module.scss
@@ -3,5 +3,9 @@
 .button_container {
   &.has_position {
     position: absolute;
+
+    &.active {
+      z-index: 1;
+    }
   } 
 }
